--- a/Frontend/src/app/modules/tender-details/components/create-tender/create-tender.component.html
+++ b/Frontend/src/app/modules/tender-details/components/create-tender/create-tender.component.html
@@ -18,9 +18,8 @@
         Add &nbsp; <i class="fa-solid fa-plus"></i>
       </button>
     </div>
-
     <nz-table #basicTable [nzData]="tenders" nzShowPagination nzShowSizeChanger [nzPageSizeOptions]="[5, 10, 15, 20]"
-      nzSize="middle">
+      nzSize="middle" [nzNoResult]= dataMessage [nzLoading]="isLoading">
       <thead>
         <tr>
           <th>S.No.</th>
