--- a/Frontend/src/app/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/Frontend/src/app/modules/dashboard/components/dashboard/dashboard.component.html
@@ -47,7 +47,7 @@
   </div>
 
 <div  class="row" style="padding-top:20px;" >
-  <div  class="col-xl-6 col-lg-6 order-lg-1 order-xl-1">
+  <!-- <div  class="col-xl-6 col-lg-6 order-lg-1 order-xl-1">
     <nz-table #basicTable
        [nzData]="Person"
        [nzTitle]="card_title"
@@ -85,7 +85,7 @@
         </div>
       </div>
     </ng-template>
-  </div>
+  </div> -->
   <div class="col-xl-6 col-lg-6 order-lg-1 order-xl-1">
     <nz-table
     [nzTitle]="card_title1"
@@ -108,7 +108,7 @@
         <span class="material-symbols-outlined" style="color: #5d78ff;"> monitoring </span>
         </div>
         <div nz-col [nzSpan]="8">
-          Visitors Count
+          Tender Status
         </div>
         <div nz-col [nzSpan]="4" [nzPush]="10">
           <a routerLink="/appointments">View all</a>
