--- a/Frontend/src/app/modules/transactions/components/transactions/transactions.component.html
+++ b/Frontend/src/app/modules/transactions/components/transactions/transactions.component.html
@@ -9,22 +9,22 @@
   <nz-content id="component-content">
 
     <div>
-      <form class="forms" [formGroup]="transactionsFilterForm">
-        <nz-form-item>
+      <form class="forms" [formGroup]="transactionsFilterForm" nz-row nzJustify="space-between" nzAlign="middle">
+        <nz-form-item nz-col nzSpan="4">
           <nz-form-label>Start Date</nz-form-label>
           <nz-form-control>
             <nz-date-picker formControlName="start_date"></nz-date-picker>
           </nz-form-control>
         </nz-form-item>
 
-        <nz-form-item>
+        <nz-form-item nz-col nzSpan="4">
           <nz-form-label>End Date</nz-form-label>
           <nz-form-control>
             <nz-date-picker formControlName="end_date"></nz-date-picker>
           </nz-form-control>
         </nz-form-item>
 
-        <nz-form-item>
+        <nz-form-item nz-col nzSpan="4">
           <nz-form-label>Type</nz-form-label>
             <nz-form-control  nzErrorTip="Please Select Type">
               <nz-select formControlName="type" nzPlaceHolder="Type" nzShowSearch>
@@ -34,9 +34,9 @@
             </nz-form-control>
         </nz-form-item>
 
-        <nz-form-item>
+        <nz-form-item nz-col nzSpan="4">
           <nz-form-label>Account</nz-form-label>
-          <nz-form-control nzErrorTip="Please select account" nz-col nzSpan="10">
+          <nz-form-control nzErrorTip="Please select account">
             <nz-select formControlName="acc_head"  nzPlaceHolder="Account" nzShowSearch>
               <nz-option *ngFor="let a of accounts_info" nzValue="{{ a.id }}"
                 nzLabel="{{ a.name }}"></nz-option>
@@ -44,12 +44,11 @@
           </nz-form-control>
         </nz-form-item>
 
-        <button nz-button nzType="primary" (click)="filterSubmit()">
+        <button nz-button nzType="primary" (click)="filterSubmit()" nz-col nzSpan="4">
           Submit
       </button>
       </form>
     </div>
-
 
 
     <div id="search-create">
