--- a/Frontend/src/app/modules/funds/components/funds/funds.component.html
+++ b/Frontend/src/app/modules/funds/components/funds/funds.component.html
@@ -30,6 +30,8 @@
     nzShowPagination
     nzShowSizeChanger
     [nzPageSizeOptions]="[5, 10, 15, 20]"
+    [nzLoading]="isLoading"
+    nzSize="middle"
   >
     <thead>
       <tr>
