--- a/Frontend/src/app/modules/works/components/works/works.component.html
+++ b/Frontend/src/app/modules/works/components/works/works.component.html
@@ -18,7 +18,7 @@
       Add &nbsp; <i class="fa-solid fa-plus"></i>
     </button>
   </div>
-  <nz-table #basicTable [nzData]="works_info" nzShowPagination nzShowSizeChanger [nzPageSizeOptions]="[5, 10, 15, 20]">
+  <nz-table #basicTable [nzData]="works_info" nzShowPagination nzShowSizeChanger [nzPageSizeOptions]="[5, 10, 15, 20]" [nzLoading]="isLoading" nzSize="middle">
     <thead>
       <tr>
         <th nzWidth="100px">S.No.</th>
