--- a/Frontend/src/app/modules/transactions/components/transactions/transactions.component.html
+++ b/Frontend/src/app/modules/transactions/components/transactions/transactions.component.html
@@ -116,6 +116,12 @@
             </div>
           </td> -->
         </tr>
+        <tr>
+          <td></td>
+          <td><b>Total</b></td>
+          <td  class='creditColor'>{{creditTotal.toString() | currencyIn }}</td>
+          <td class='debitColor'>{{debitTotal.toString() | currencyIn }}</td>
+        </tr>
       </tbody>
     </nz-table>
    
